Fix gun renderization on firefox

--- a/src/Game/components/Gun/Cube/styles.scss
+++ b/src/Game/components/Gun/Cube/styles.scss
@@ -3,6 +3,7 @@
   height: 100%;
   display: grid;
   place-items: center;
+  transform-style: preserve-3d;
 }
 
 .cube {
